# si26-math-animation-john

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py  routes.py  session.py
backend/app/models/: candidate.py  scene.py
backend/app/pipeline/: bedrock_client.py  classification.py  discovery.py  extraction.py  grounding.py  parsing.py  process_scene.py
backend/app/render/: full_render.py  render_worker.py
backend/app/templates/: registry.py
backend/app/templates/_shared/: chained_scene.py  fit_to_frame.py  fraction_cells.py
backend/app/templates/array_grid/: guard.py  params.py  (+1 more)
backend/scripts/: benchmark_latency.py
backend/tests/: test_benchmark_latency.py  test_config.py  test_eval_harness.py  test_routes.py  test_session.py
backend/tests/models/: test_models.py
backend/tests/pipeline/: test_classification.py  test_discovery.py  test_extraction.py  test_grounding.py  test_parsing.py  test_process_scene.py
backend/tests/render/: test_full_render.py
backend/tests/templates/: test_array_grid_guard.py  test_balance_scale_guard.py  test_balance_scale_scene.py  test_chained_array_grid.py  test_chained_balance_scale.py  test_chained_fraction_bar.py  test_chained_fraction_of_whole.py  test_chained_number_line.py  test_fraction_bar_guard.py  test_fraction_bar_scene.py  test_fraction_cells.py  test_fraction_of_whole_guard.py  test_fraction_of_whole_scene.py  test_number_line_guard.py  test_number_line_scene.py  test_registry.py  test_text_card_guard.py  test_text_card_overflow.py  test_text_card_scene.py
(+51 files in other folders)
